--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  color: #342626;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-x-scroll-bar::-webkit-scrollbar {
   display: none;
