--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,27 @@
 body {
   color: #342626;
 }
+body::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+body::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+}
+body::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+body::-webkit-scrollbar-thumb:active {
+  background: rgba(0, 0, 0, 0.9);
+}
 
+/* SCROLL BARS */
+/* 1 - Hidden scroll bar */
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-x-scroll-bar::-webkit-scrollbar {
   display: none;
@@ -17,24 +37,27 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
-/* .gridGallery {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: 3rem;
-} */
-
-/* .galleryCol:nth-child(-1n + 3) {
-  grid-column: span 4;
+/* 2- simple scroll bar */
+.simple-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
 }
-.galleryCol:nth-last-child(2) {
-  grid-row-start: 2;
-  grid-column: 3 / span 4;
+.simple-scrollbar::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
 }
-.galleryCol:nth-last-child(1) {
-  grid-row-start: 2;
-  grid-column: 7 / span 4;
-} */
+.simple-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.simple-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+.simple-scrollbar::-webkit-scrollbar-thumb:active {
+  background: rgba(0, 0, 0, 0.9);
+}
 
+/* misc */
 .textShadow {
   text-shadow: 1px 1px 1px #000;
 }
